# modulegraph

./: .gitignore  .hgignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  README.txt  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
doc/: changelog.rst  commandline.rst  conf.py  find_modules.rst  index.rst  modulegraph.rst  util.rst  zipio.rst
modulegraph/: __init__.py  _imp.py  compat.py  find_modules.py  modulegraph.py  util.py  zipio.py
modulegraph_tests/: test_basic.py  test_compat.py  test_compiled_modules.py  test_explicit_packages.py  test_implies.py  test_import_from_init.py  test_imports.py  test_modulegraph.py  test_pep420_nspkg.py  test_pycompat_pkg.py  test_relimport2.py  test_setuptools_nspkg.py  test_util.py  test_version.py  test_zipio.py
modulegraph_tests/testpkg-import-from-init/: script.py
modulegraph_tests/testpkg-regr1/: main_script.py
modulegraph_tests/testpkg-regr2/pkg/: __init__.py
modulegraph_tests/testpkg-regr4/pkg/core/: callables.py  listener.py
modulegraph_tests/testpkg-regr6/: module.py
modulegraph_tests/testpkg-relimport/: script.py
modulegraph_tests/testpkg-setuptools-namespace/src/nspkg.egg-info/: PKG-INFO
scripts/: extract_implies.py
test/: test_basic.py  test_imports.py  test_setuptools_nspkg.py  test_util.py
test/testpkg-relimport/: script.py
testsuite/: test_imports.py  test_setuptools_nspkg.py
testsuite/testpkg-regr1/pkg/: a.py
testsuite/testpkg-relimport/pkg/subpkg/: mod2.py
