[metadata]
name = modulegraph
version = 0.11.2
description = Python module dependency analysis tool
long_description_file =
  README.txt
  doc/changelog.rst
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Software Development :: Build Tools
maintainer = Ronald Oussoren
maintainer_email = ronaldoussoren@mac.com
url = http://bitbucket.org/ronaldoussoren/modulegraph
download_url = http://pypi.python.org/pypi/modulegraph
license = MIT
packages = modulegraph
platforms = any
requires-dist =
   altgraph (>= 0.11)
console_scripts =
   modulegraph = modulegraph.__main__:main
